Services/proxmox2/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox2
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox2.zlaya.tech`)
      kind: Rule
      services:
        - name: proxmox2
          port: 443
          scheme: https
          passHostHeader: true
      middlewares:
        - name: default-headers
          namespace: default
        - name: oidc-auth
          namespace: proxmox2
  tls:
    secretName: zlayatech-production-tls
